--- a/index.html
+++ b/index.html
@@ -8,7 +8,48 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    change something
-    
+    <section id="wlcm-section">
+        <div class="welcome">
+            <div class="half-width">
+                <h1>Welcome To</h1>
+                <h2><span>Peter Parker</span> World</h2>
+                <h3>Build Climber and Train Stopper</h3>
+                <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
+                <button>HIRE ME</button>
+            </div>
+            <div class="half-width">
+                <img src="img/my-bg4.png" alt="Arjun Roy">
+            </div>
+        </div>
+    </section>
+    <section id="drime">
+        <div class="welcome pr15">
+            <div class="half-width">
+                <img src="img/my-bg2 (5).png" alt="Arjun Roy">
+            </div>
+            <div class="half-width">
+                <h1>Dream Big</h1>
+                <h3>Become a web developer</h3>
+                <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+                <button>DOWNLOAD RESUME</button>
+            </div>
+        </div>
+    </section>
+    <section id="experiences">
+        <h1>Experiences</h1>
+        <div class="developer">
+            <div class="experiences-text fullstrk">
+                <h1>Full Stack Web Developer</h1>
+                <h3><span>2021-Present | Pro Level Developer</span></h3>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+            </div>
+            <div class="experiences-text baby">
+                <h1>Baby Web Developer</h1>
+                <h3><span>2020-2021 | Programming Hero Learner</span></h3>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+            </div>
+        </div>
+    </section>
+    <footer>© Peter Parker 2021, a Programming Hero initiative.</footer>
 </body>
 </html>
